Changes in version 1.13.01 (2020-10-29)
- Update type: minor.
- Version bump due to Bioconductor release.
- Fixed an error in importRdata() that could cause trouble when fixing StringTie annotation. Thanks to @yaccos for identifying the problem.
- analyseSignalP() was updated to handle cases where no signal peptides were found with a warning instead of an error.

Changes in version 1.11.11 (2020-10-13)
- Update type: minor.
- Fixed the mistake in importIsoformExpression() introduced in last updated

Changes in version 1.11.10 (2020-10-13)
- Update type: minor.
- Update of importIsoformExpression() fix the import of countsFromAbundance

Changes in version 1.11.9 (2020-10-12)
- Update type: Minor.
- More updates regarding namespace and dependencies

Changes in version 1.11.8 (2020-10-09)
- Update type: Minor.
- Description update regarding to namespace

Changes in version 1.11.7 (2020-09-30)
- Update type: Minor.
- Various documentation updates
- The plotting order of the sub-plots of switchPlot() was changed to avoid problems when having long isoform names.
- analyzeSignalP() was updated to be more robust at handling SignalP5 data where very few predictions were done.

Changes in version 1.11.6 (2020-09-17)
- Update type: Minor.
- Updated namespace.

Changes in version 1.11.5 (2020-09-14)
- Update type: Minor.
- Updated example code in importIsoformExpression()
- Updated namespace

Changes in version 1.11.4 (2020-09-10)
- Update type: Medium.
- importRdata() was updated to give examples of sequence names when no overlap between fasta file and expression data was found.
- importRdata() was updated to try and rescue missing gene_name annoations (must likely due to novel transcripts) and split merged genes (a problem often occuring when doing transcript assembly with tools such as Cufflinks/StringTie).
- importRdata() and importCufflinksFiles() was udated with an option to print a guesstimate on the number of genes with differential isoform usage.