@@ -2,6 +2,7 @@ Changes in version 1.13.01 (2020-10-29)
 - Update type: minor.
 - Version bump due to Bioconductor release.
 - Fixed an error in importRdata() that could cause trouble when fixing StringTie annotation. Thanks to @yaccos for identifying the problem.
+- Fixed an edge-case senario where the estimation of DTU in importRdata() caused an error.
 - analyseSignalP() was updated to handle cases where no signal peptides were found with a warning instead of an error.
 
 Changes in version 1.11.11 (2020-10-13)
